# SkyFire_5xx

./: CMakeLists.txt
cmake/: options.cmake
cmake/macros/: FindPCHSupport.cmake
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/boost_1_54_0/: CMakeLists.txt
dep/boost_1_54_0/boost/: cstdint.hpp
dep/g3dlite/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt  DetourNavMesh.h  DetourNavMeshQuery.cpp
sql/base/: auth_database.sql
sql/updates/auth/: 2014_04_04_00_realmlist.sql
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt
src/server/collision/: CMakeLists.txt
src/server/collision/Management/: MMapFactory.cpp  MMapFactory.h  MMapManager.cpp
src/server/game/: CMakeLists.txt
src/server/game/Entities/Creature/: Creature.cpp  Creature.h
src/server/game/Entities/Pet/: Pet.h
src/server/game/Entities/Player/: Player.cpp
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Globals/: ObjectAccessor.h
src/server/game/Handlers/: MovementHandler.cpp
src/server/game/Maps/: Map.cpp  Map.h  MapInstanced.cpp  Pathfinding.cpp  Pathfinding.h
src/server/game/Miscellaneous/: SharedDefines.h
src/server/game/Movement/: MotionMaster.cpp  MotionMaster.h  MovementGenerator.h  PathGenerator.cpp  PathGenerator.h
src/server/game/Movement/MovementGenerators/: ConfusedMovementGenerator.cpp  FleeingMovementGenerator.cpp  FleeingMovementGenerator.h  HomeMovementGeneratorPathFind.cpp  HomeMovementGeneratorPathFind.h  IdleMovementGenerator.cpp  IdleMovementGenerator.h  PointMovementGenerator.cpp  PointMovementGenerator.h  PointMovementGeneratorPathFind.cpp  PointMovementGeneratorPathFind.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  TargetedMovementGeneratorPathFind.cpp  TargetedMovementGeneratorPathFind.h  WaypointMovementGenerator.cpp
src/server/game/Movement/Spline/: MoveSplineInit.cpp  MoveSplineInit.h
src/server/game/PrecompiledHeaders/: gamePCH.h
src/server/game/Spells/: Spell.cpp  Spell.h  SpellEffects.cpp  SpellMgr.cpp
src/server/game/World/: World.cpp  World.h
src/server/pathfinding/: CMakeLists.txt
src/server/pathfinding/Detour/: CMakeLists.txt  DetourNavMesh.cpp
src/server/pathfinding/Recast/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
src/server/scripts/Commands/: cs_misc.cpp  cs_mmaps.cpp
src/server/scripts/EasternKingdoms/BaradinHold/: baradin_hold.h  instance_baradin_hold.cpp
src/server/scripts/Northrend/CrusadersColiseum/TrialOfTheCrusader/: trial_of_the_crusader.h
src/server/scripts/Spells/: spell_mage.cpp
src/server/shared/: CMakeLists.txt
src/server/worldserver/: CMakeLists.txt  worldserver.conf.dist
src/tools/vmap4_assembler/: CMakeLists.txt
